Fix gaps between outline buttons

--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -118,9 +118,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    :first-child {
-      margin-right: 3px;
+    gap: 3px;
+
+    .outlines {
+      display: flex;
+      gap: 3px;
     }
+
     .buttonHover {
       cursor: pointer;
     }
